force-app/main/default/objects/Process__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evaluation</fullName>
                <default>true</default>
                <label>Evaluation and development of the programme</label>
            </value>
            <value>
                <fullName>Enrolment</fullName>
                <label>Student enrolment</label>
            </value>
            <value>
                <fullName>Planning</fullName>
                <label>Planning and implementation of teaching</label>
            </value>
            <value>
                <fullName>Support</fullName>
                <label>Study support and guidance</label>
            </value>
            <value>
                <fullName>Impact</fullName>
                <label>Societal impact and collaboration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>