force-app/main/default/objects/Process__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Process end date</description>
    <label>EndDate</label>
    <type>Date</type>
</CustomField>