force-app/main/default/objects/Process__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Process Groups. Users can define their own groups.</description>
    <inlineHelpText>Use existing group or enter new group name.</inlineHelpText>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Student feedback process</fullName>
            </value>
            <value>
                <fullName>TEE evaluation</fullName>
            </value>
            <value>
                <fullName>Programme review</fullName>
            </value>
            <value>
                <fullName>New programme</fullName>
            </value>
            <value>
                <fullName>Student marketing</fullName>
            </value>
            <value>
                <fullName>Admission process</fullName>
            </value>
            <value>
                <fullName>Student recruitment</fullName>
            </value>
            <value>
                <fullName>Orientation</fullName>
            </value>
            <value>
                <fullName>Student engagement</fullName>
            </value>
            <value>
                <fullName>Curriculum design</fullName>
            </value>
            <value>
                <fullName>Student mobility</fullName>
            </value>
            <value>
                <fullName>Graduation</fullName>
            </value>
            <value>
                <fullName>Stakeholder collaboration</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>