force-app/main/default/objects/Process__c/fields/ProcessType__c.field-meta.xml
<CustomField>
    <fullName>ProcessType__c</fullName>
    <description>ProcessType (Admissions, Curriculum, Evaluation, Graduation, Marketing, Orientation or Mobility)</description>
    <label>ProcessType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admissions</fullName>
            </value>
            <value>
                <fullName>Curriculum</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Graduation</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Orientation</fullName>
            </value>
            <value>
                <fullName>Mobility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>